01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: busybox
    image: busybox
    command:
    - sleep
    - "3600"
  # - name: alpine
  #   image: alpine
  #   command:
  #   - sleep
  #   - "3600"
  #   resources:
  #     limits:
  #       memory: "10Mi"
  #       cpu: "100m"
