03-01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster
spec:
#  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
