03-03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  type: LoadBalance
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
