04-mysqldb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - image: mysql
        name: mysql 
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: mysqldb
