04-01-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: besto-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - besto.set.or.th
      secretName: temp-tls-secret
  rules:
  - host: besto.set.or.th
    http:
      paths:
      - backend:
          serviceName: nginx-cluster
          servicePort: 80
